# electricui-cli

./: Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml
src/: check.rs  codec.rs  device.rs  error.rs  main.rs  opts.rs  types.rs
